# -forgevision

./: .dockerignore  .gitignore  README.md  config.py  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements.txt
api/: Dockerfile  __init__.py  checkpoints.py  inference.py  main.py  model_cache.py  requirements-docker.txt  requirements.txt  thresholds.py
core/: __init__.py  aggregate.py  base.py  dataset.py  evaluate.py  factory.py  heatmap.py  metrics.py  runner.py  utils.py  visualize.py
docs/: .gitkeep
eval/: bottle_train_log.json  cable_train_log.json  capsule_train_log.json  carpet_train_log.json  comparison.md  grid_train_log.json  hazelnut_train_log.json  leather_train_log.json  metal_nut_train_log.json  metrics.json  pill_train_log.json  results.csv  results.md  results_patchcore.csv  screw_train_log.json  thresholds.json  tile_train_log.json  toothbrush_train_log.json  transistor_train_log.json  wood_train_log.json  zipper_train_log.json
forgevision/: __init__.py  config.py
forgevision/core/: aggregate.py  evaluate.py  factory.py  heatmap.py  runner.py  visualize.py
forgevision/methods/autoencoder/: __init__.py  method.py
methods/: __init__.py
methods/autoencoder/: __init__.py  method.py  model.py
methods/patchcore/: __init__.py  coreset.py  method.py  nn_search.py
scripts/: compute_thresholds.py  run_all.py  run_eval.py  run_train.py
ui/: Dockerfile  __init__.py  index.html  nginx.conf  package-lock.json  package.json
ui/public/samples/: README.md
ui/scripts/: generate_samples.py
ui/src/: App.css  App.jsx  api.js
(+3 files in other folders)
